Dependencies and parsing fix

--- a/TMInterp.cabal
+++ b/TMInterp.cabal
@@ -58,7 +58,7 @@ library
     import:           warnings
 
     -- Modules exported by the library.
-    exposed-modules:  TM, TMCollection
+    exposed-modules:  TM, TMCollection, ParseTM
 
     -- Modules included in this library but not exported.
     -- other-modules:
@@ -67,7 +67,7 @@ library
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.17.2.1
+    build-depends:    base ^>=4.17.2.1, parsec
 
     -- Directories containing source files.
     hs-source-dirs:   src
@@ -83,7 +83,7 @@ executable TMInterp
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    -- other-modules: TM, TMCollection, ParseTM
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -91,6 +91,7 @@ executable TMInterp
     -- Other library packages from which modules are imported.
     build-depends:
         base ^>=4.17.2.1,
+        parsec,
         TMInterp
 
     -- Directories containing source files.
