--- a/dist-newstyle/packagedb/ghc-9.4.8/TMInterp-0.1.0.0-inplace.conf
+++ b/dist-newstyle/packagedb/ghc-9.4.8/TMInterp-0.1.0.0-inplace.conf
@@ -8,7 +8,7 @@ maintainer:           atalay.aydindeniz@gmail.com
 author:               Deniz Atalay
 abi:                  inplace
 exposed:              True
-exposed-modules:      TM TMCollection
+exposed-modules:      ParseTM TM TMCollection
 import-dirs:
     C:\Users\deniz\Desktop\Documents\Haskell\TMInterp\dist-newstyle\build\x86_64-windows\ghc-9.4.8\TMInterp-0.1.0.0\build
 
@@ -27,7 +27,7 @@ dynamic-library-dirs:
 data-dir:             C:\Users\deniz\Desktop\Documents\Haskell\TMInterp\.
 hs-libraries:         HSTMInterp-0.1.0.0-inplace
 include-dirs:         C:\Programs\haskell\ghcup\msys64\mingw64\include
-depends:              base-4.17.2.1
+depends:              base-4.17.2.1 parsec-3.1.16.1
 haddock-interfaces:
     C:\Users\deniz\Desktop\Documents\Haskell\TMInterp\dist-newstyle\build\x86_64-windows\ghc-9.4.8\TMInterp-0.1.0.0\doc\html\TMInterp\TMInterp.haddock
 
