Decided on generator syntax

--- a/dist-newstyle/packagedb/ghc-9.4.8/TMInterp-0.1.0.0-inplace.conf
+++ b/dist-newstyle/packagedb/ghc-9.4.8/TMInterp-0.1.0.0-inplace.conf
@@ -27,7 +27,10 @@ dynamic-library-dirs:
 data-dir:             C:\Users\deniz\Desktop\Documents\Haskell\TMInterp\.
 hs-libraries:         HSTMInterp-0.1.0.0-inplace
 include-dirs:         C:\Programs\haskell\ghcup\msys64\mingw64\include
-depends:              base-4.17.2.1 parsec-3.1.16.1
+depends:
+    List-0.6.2-3b689d039a5c3906130adedf9e31dd269a7316cc base-4.17.2.1
+    parsec-3.1.16.1
+
 haddock-interfaces:
     C:\Users\deniz\Desktop\Documents\Haskell\TMInterp\dist-newstyle\build\x86_64-windows\ghc-9.4.8\TMInterp-0.1.0.0\doc\html\TMInterp\TMInterp.haddock
 
