--- a/dist-newstyle/packagedb/ghc-9.4.8/TMInterp-0.1.0.0-inplace.conf
+++ b/dist-newstyle/packagedb/ghc-9.4.8/TMInterp-0.1.0.0-inplace.conf
@@ -8,7 +8,7 @@ maintainer:           atalay.aydindeniz@gmail.com
 author:               Deniz Atalay
 abi:                  inplace
 exposed:              True
-exposed-modules:      ParseTM TM TMCollection
+exposed-modules:      ParseTM TM TMCollection TMGen
 import-dirs:
     C:\Users\deniz\Desktop\Documents\Haskell\TMInterp\dist-newstyle\build\x86_64-windows\ghc-9.4.8\TMInterp-0.1.0.0\build
 
